envoy-proxy-service-mesh/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: pagos
              domains: ["*"]
              routes:
              # Canary 90/10 entre pagos-v1 y pagos-v2, igual que el ejemplo VirtualService de Istio del post
              - match: { prefix: "/" }
                route:
                  timeout: 3s
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 2
                  weighted_clusters:
                    clusters:
                    - name: pagos_v1
                      weight: 90
                    - name: pagos_v2
                      weight: 10
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: pagos_v1
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    connect_timeout: 1s
    load_assignment:
      cluster_name: pagos_v1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: backend-v1, port_value: 5678 }
  - name: pagos_v2
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    connect_timeout: 1s
    load_assignment:
      cluster_name: pagos_v2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: backend-v2, port_value: 5678 }

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
